# natwm

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  OSX.md  README.md  run.sh
.travis/: install.sh
.travis/dependencies/: cmake.sh
ci/: install.sh  osx-xcb.sh
cmake/: AddNatwmTest.cmake
src/: .clang-format  CMakeLists.txt  natwm.c
src/common/: CMakeLists.txt  color.c  color.h  constants.h  error.c  error.h  hash.c  hash.h  list.c  list.h  logger.c  logger.h  map.c  map.h  stack.c  stack.h  string.c  string.h  theme.c  theme.h  tree.c  tree.h  types.h  util.c  util.h
src/core/: CMakeLists.txt  button.c  button.h  client.c  client.h  config.c  config.h  dict.c  dict.h  event.c  ewmh.c  ewmh.h  list.c  list.h  map.c  map.h  monitor.c  monitor.h  mouse.c  mouse.h  randr.c  randr.h  screen.c  screen.h  state.c  state.h  tile.c  tile.h  tree.c  tree.h  workspace.c  workspace.h  xinerama.c  xinerama.h
src/core/config/: config.c  config.h  parser.c  parser.h  value.c  value.h
src/core/events/: event.c  event.h  randr-event.c  randr-event.h
src/natwm/: CMakeLists.txt  natwm.c
src/test/: CMakeLists.txt  test_config.c  test_list.c  test_main.c  test_map.c  test_stack.c  test_string_util.c  test_theme.c  test_tree.c
