add_library(core STATIC
    config/config.c
    config/config.h
    config/parser.c
    config/parser.h
    config/value.c
    config/value.h
    events/event.c
    events/event.h
    ewmh.c
    ewmh.h
    monitor.c
    monitor.h
    randr.c
    randr.h
    state.c
    state.h
    workspace.c
    workspace.h
    xinerama.c
    xinerama.h
)

target_link_libraries(core
    PRIVATE
        common
        pthread
        xcb
        xcb-ewmh
        xcb-randr
        xcb-xinerama
)
